package com.harisha.smartfarmdairy;

import android.support.v7.app.AppCompatActivity;
import android.os.Bundle;

public class Equipment extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_equipment);
    }
}
