@startuml

title __SMARTFARMDAIRY's Class Diagram__\n

  package com.harisha.smartfarmdairy {
    class Calculator {
        # onCreate()
    }
  }
  

  package com.harisha.smartfarmdairy {
    class DatabaseHelper {
        {static} - DATABASE_NAME : String
        + DatabaseHelper()
        + onCreate()
        + onUpgrade()
        + insertdata()
        + insertincome()
        + getexpenses()
        + getincome()
        + deleteAll()
    }
  }
  

  package com.harisha.smartfarmdairy {
    class Equipment {
        # onCreate()
    }
  }
  

  package com.harisha.smartfarmdairy {
    class Expenses {
        - seeds : EditText
        - fert : EditText
        - pest : EditText
        - eam : EditText
        - wages : EditText
        - others : EditText
        - note : EditText
        - submit : Button
        # onCreate()
    }
  }
  

  package com.harisha.smartfarmdairy {
    class Income {
        - income : EditText
        - insub : Button
        # onCreate()
    }
  }
  

  package com.harisha.smartfarmdairy {
    class MainActivity {
        - chart : PieChart
        - yData : int[]
        - textView : TextView
        - xData : String[]
        ~ sedds : int
        ~ fert : int
        ~ pest : int
        ~ eam : int
        ~ wages : int
        ~ others : int
        ~ income : int
        ~ expenditure : int
        # onCreate()
        - addDataSet()
        + onBackPressed()
        + onCreateOptionsMenu()
        + onOptionsItemSelected()
        + onNavigationItemSelected()
    }
  }
  

  Calculator -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  DatabaseHelper -up-|> SQLiteOpenHelper
  Equipment -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  Expenses -up-|> AppCompatActivity
  Expenses o-- DatabaseHelper : databaseHelper
  HostCallbacks -up-|> FragmentHostCallback
  Income -up-|> AppCompatActivity
  Income o-- DatabaseHelper : helper
  HostCallbacks -up-|> FragmentHostCallback
  MainActivity -up-|> OnNavigationItemSelectedListener
  MainActivity -up-|> AppCompatActivity
  MainActivity o-- DatabaseHelper : helper
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
